Update and rename Savannah JV Tournament 2-2-2019_games.html to jv_games.html

--- a/tv/jv_games.html
+++ b/tv/jv_games.html
@@ -1,7 +1,8 @@
 <HTML>
 <HEAD>
 <TITLE>  Scoreboard </TITLE>
-
+  <meta http-equiv="refresh"content=20;url=http://www.savqb.me/tv/decide
+<!--info goes under here-->
 </HEAD>
 <BODY>
 <table border=0 width=100%>
@@ -15,5 +16,6 @@
 </tr>
 </table>
 <H1> Scoreboard</H1><P>
+  <!--stop here ya dummy-->
 </BODY>
 </HTML>
