--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 <BODY>
 <table border=0 width=100%>
 <tr>
-  <td><A HREF=Varsity_standings.html>Standings</A></td>
-  <td><A HREF=Varsity_individuals.html>Individuals</A></td>
-  <td><A HREF=Varsity_games.html>Scoreboard</A></td>
-  <td><A HREF=Varsity_teamdetail.html>Team Detail</A></td>
-  <td><A HREF=Varsity_playerdetail.html>Individual Detail</A></td>
-  <td><A HREF=Varsity_statkey.html#TeamStandings>Stat Key</A></td>
+  <td><A HREF=JV_standings.html>Standings</A></td>
+  <td><A HREF=JV_individuals.html>Individuals</A></td>
+  <td><A HREF=JV_games.html>Scoreboard</A></td>
+  <td><A HREF=JV_teamdetail.html>Team Detail</A></td>
+  <td><A HREF=JV_playerdetail.html>Individual Detail</A></td>
+  <td><A HREF=JV_statkey.html#TeamStandings>Stat Key</A></td>
 </tr>
 </table>
 <H1> Team Standings</H1><P>
