--- a/JV_playerdetail.html
+++ b/JV_playerdetail.html
@@ -6,12 +6,12 @@
 <BODY>
 <table border=0 width=100%>
 <tr>
-  <td><A HREF=Savannah%20JV%20Tournament%20report%202-4-2017_statkey.html_teamdetail.html_standings.html>Standings</A></td>
-  <td><A HREF=Savannah%20JV%20Tournament%20report%202-4-2017_statkey.html_teamdetail.html_individuals.html>Individuals</A></td>
-  <td><A HREF=Savannah%20JV%20Tournament%20report%202-4-2017_statkey.html_teamdetail.html_games.html>Scoreboard</A></td>
-  <td><A HREF=Savannah%20JV%20Tournament%20report%202-4-2017_statkey.html_teamdetail.html_teamdetail.html>Team Detail</A></td>
-  <td><A HREF=Savannah%20JV%20Tournament%20report%202-4-2017_statkey.html_teamdetail.html_playerdetail.html>Individual Detail</A></td>
-  <td><A HREF=Savannah%20JV%20Tournament%20report%202-4-2017_statkey.html_teamdetail.html_statkey.html#IndividualDetail>Stat Key</A></td>
+  <td><A HREF=JV_standings.html>Standings</A></td>
+  <td><A HREF=JV_individuals.html>Individuals</A></td>
+  <td><A HREF=JV_games.html>Scoreboard</A></td>
+  <td><A HREF=JV_teamdetail.html>Team Detail</A></td>
+  <td><A HREF=JV_playerdetail.html>Individual Detail</A></td>
+  <td><A HREF=JV_statkey.html#IndividualDetail>Stat Key</A></td>
 </tr>
 </table>
 <H1> Individual Detail</H1><P>
